--- a/app/src/main/res/drawable/ic_git_commit.xml
+++ b/app/src/main/res/drawable/ic_git_commit.xml
@@ -1,5 +1,11 @@
-<vector android:autoMirrored="true" android:height="16dp"
-    android:viewportHeight="16.0" android:viewportWidth="14.0"
-    android:width="14dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M10.86,7c-0.45,-1.72 -2,-3 -3.86,-3 -1.86,0 -3.41,1.28 -3.86,3H0v2h3.14c0.45,1.72 2,3 3.86,3 1.86,0 3.41,-1.28 3.86,-3H14V7h-3.14zM7,10.2c-1.22,0 -2.2,-0.98 -2.2,-2.2 0,-1.22 0.98,-2.2 2.2,-2.2 1.22,0 2.2,0.98 2.2,2.2 0,1.22 -0.98,2.2 -2.2,2.2z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:width="14dp"
+        android:height="16dp"
+        android:viewportWidth="14.0"
+        android:viewportHeight="16.0">
+    <path
+        android:pathData="M10.86,7C10.41,5.28 8.86,4 7,4C5.14,4 3.59,5.28 3.14,7L0,7L0,9L3.14,9C3.59,10.72 5.14,12 7,12C8.86,12 10.41,10.72 10.86,9L14,9L14,7L10.86,7L10.86,7ZM7,10.2C5.78,10.2 4.8,9.22 4.8,8C4.8,6.78 5.78,5.8 7,5.8C8.22,5.8 9.2,6.78 9.2,8C9.2,9.22 8.22,10.2 7,10.2L7,10.2Z"
+        android:strokeColor="#00000000"
+        android:fillColor="#000000"
+        android:strokeWidth="1"/>
 </vector>
