--- a/app/src/main/res/layout/activity_repo_detail.xml
+++ b/app/src/main/res/layout/activity_repo_detail.xml
@@ -26,12 +26,33 @@
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
+        android:visibility="gone"
         />
   </android.support.design.widget.AppBarLayout>
 
-  <android.support.v4.view.ViewPager
-      android:id="@+id/content"
+  <FrameLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      />
+      >
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
+
+    <com.roughike.bottombar.BottomBar
+        android:id="@+id/bottomBar"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_gravity="bottom"
+        app:bb_tabXmlResource="@xml/tabs_pullrequest"
+        app:bb_tabletMode="false"
+        app:bb_activeTabColor="@color/white"
+        app:bb_inActiveTabColor="@color/white"
+        app:bb_activeTabAlpha="1"
+        app:bb_inActiveTabAlpha="0.8"
+        />
+  </FrameLayout>
+
 </LinearLayout>
