--- a/app/src/main/res/layout/activity_repo_detail.xml
+++ b/app/src/main/res/layout/activity_repo_detail.xml
@@ -1,8 +1,8 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                 android:layout_width="match_parent"
+                                                 android:layout_height="match_parent"
+                                                 android:orientation="vertical"
     >
 
   <android.support.design.widget.AppBarLayout
@@ -22,37 +22,27 @@
         app:layout_scrollFlags="scroll|enterAlways"
         />
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tabLayout"
-        android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
-        android:visibility="gone"
-        />
   </android.support.design.widget.AppBarLayout>
 
   <FrameLayout
+      android:id="@+id/content"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      >
+      app:layout_behavior="@string/appbar_scrolling_view_behavior"
+      />
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/content"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+  <com.roughike.bottombar.BottomBar
+      android:id="@+id/bottomBar"
+      android:layout_width="match_parent"
+      android:layout_height="60dp"
+      android:layout_gravity="bottom"
+      app:bb_tabXmlResource="@xml/tabs_repository"
+      app:bb_tabletMode="false"
+      app:bb_activeTabColor="@color/white"
+      app:bb_inActiveTabColor="@color/white"
+      app:bb_activeTabAlpha="1"
+      app:bb_inActiveTabAlpha="0.8"
+      app:bb_behavior="shifting|shy"
+      />
 
-    <com.roughike.bottombar.BottomBar
-        android:id="@+id/bottomBar"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_gravity="bottom"
-        app:bb_tabXmlResource="@xml/tabs_pullrequest"
-        app:bb_tabletMode="false"
-        app:bb_activeTabColor="@color/white"
-        app:bb_inActiveTabColor="@color/white"
-        app:bb_activeTabAlpha="1"
-        app:bb_inActiveTabAlpha="0.8"
-        />
-  </FrameLayout>
-
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
