--- a/app/src/main/res/drawable/ic_git_pull_request.xml
+++ b/app/src/main/res/drawable/ic_git_pull_request.xml
@@ -1,5 +1,11 @@
-<vector android:autoMirrored="true" android:height="16dp"
-    android:viewportHeight="16.0" android:viewportWidth="12.0"
-    android:width="12dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M11,11.28L11,5c-0.03,-0.78 -0.34,-1.47 -0.94,-2.06C9.46,2.35 8.78,2.03 8,2L7,2L7,0L4,3l3,3L7,4h1c0.27,0.02 0.48,0.11 0.69,0.31 0.21,0.2 0.3,0.42 0.31,0.69v6.28A1.993,1.993 0,0 0,10 15a1.993,1.993 0,0 0,1 -3.72zM10,14.2c-0.66,0 -1.2,-0.55 -1.2,-1.2 0,-0.65 0.55,-1.2 1.2,-1.2 0.65,0 1.2,0.55 1.2,1.2 0,0.65 -0.55,1.2 -1.2,1.2zM4,3c0,-1.11 -0.89,-2 -2,-2a1.993,1.993 0,0 0,-1 3.72v6.56A1.993,1.993 0,0 0,2 15a1.993,1.993 0,0 0,1 -3.72L3,4.72c0.59,-0.34 1,-0.98 1,-1.72zM3.2,13c0,0.66 -0.55,1.2 -1.2,1.2 -0.65,0 -1.2,-0.55 -1.2,-1.2 0,-0.65 0.55,-1.2 1.2,-1.2 0.65,0 1.2,0.55 1.2,1.2zM2,4.2C1.34,4.2 0.8,3.65 0.8,3c0,-0.65 0.55,-1.2 1.2,-1.2 0.65,0 1.2,0.55 1.2,1.2 0,0.65 -0.55,1.2 -1.2,1.2z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:width="12dp"
+        android:height="16dp"
+        android:viewportWidth="12.0"
+        android:viewportHeight="16.0">
+    <path
+        android:pathData="M11,11.28L11,5C10.97,4.22 10.66,3.53 10.06,2.94C9.46,2.35 8.78,2.03 8,2L7,2L7,0L4,3L7,6L7,4L8,4C8.27,4.02 8.48,4.11 8.69,4.31C8.9,4.51 8.99,4.73 9,5L9,11.28C8.41,11.62 8,12.26 8,13C8,14.11 8.89,15 10,15C11.11,15 12,14.11 12,13C12,12.27 11.59,11.62 11,11.28L11,11.28ZM10,14.2C9.34,14.2 8.8,13.65 8.8,13C8.8,12.35 9.35,11.8 10,11.8C10.65,11.8 11.2,12.35 11.2,13C11.2,13.65 10.65,14.2 10,14.2L10,14.2ZM4,3C4,1.89 3.11,1 2,1C0.89,1 0,1.89 0,3C0,3.73 0.41,4.38 1,4.72L1,11.28C0.41,11.62 0,12.26 0,13C0,14.11 0.89,15 2,15C3.11,15 4,14.11 4,13C4,12.27 3.59,11.62 3,11.28L3,4.72C3.59,4.38 4,3.74 4,3L4,3ZM3.2,13C3.2,13.66 2.65,14.2 2,14.2C1.35,14.2 0.8,13.65 0.8,13C0.8,12.35 1.35,11.8 2,11.8C2.65,11.8 3.2,12.35 3.2,13L3.2,13ZM2,4.2C1.34,4.2 0.8,3.65 0.8,3C0.8,2.35 1.35,1.8 2,1.8C2.65,1.8 3.2,2.35 3.2,3C3.2,3.65 2.65,4.2 2,4.2L2,4.2Z"
+        android:strokeColor="#00000000"
+        android:fillColor="#000000"
+        android:strokeWidth="1"/>
 </vector>
