--- a/app/src/main/res/layout/markdonw_file_fragment.xml
+++ b/app/src/main/res/layout/markdonw_file_fragment.xml
@@ -5,6 +5,13 @@
              android:layout_height="match_parent"
     >
 
+  <ProgressBar
+      android:id="@+id/htmlLoading"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="center"
+      />
+
   <WebView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
