--- a/app/src/main/res/xml/tabs_repository.xml
+++ b/app/src/main/res/xml/tabs_repository.xml
@@ -7,15 +7,21 @@
       barColorWhenSelected="@color/md_teal_800"
       />
   <tab
-      id="@+id/tab_content"
+      id="@+id/tab_readme"
       icon="@drawable/ic_circuit_board"
-      title="Content"
-      barColorWhenSelected="@color/md_deep_orange_800"
+      title="Readme"
+      barColorWhenSelected="@color/md_deep_orange_400"
       />
   <tab
       id="@+id/tab_issues"
       icon="@drawable/ic_issue_opened"
       title="Issues"
+      barColorWhenSelected="@color/md_brown_500"
+      />
+  <tab
+      id="@+id/tab_pulls"
+      icon="@drawable/ic_git_pull_request"
+      title="Pull requests"
       barColorWhenSelected="@color/md_brown_500"
       />
   <tab
