--- a/app/src/main/res/drawable/ic_file.xml
+++ b/app/src/main/res/drawable/ic_file.xml
@@ -2,10 +2,12 @@
         android:width="12dp"
         android:height="16dp"
         android:viewportWidth="12.0"
-        android:viewportHeight="16.0">
-    <path
-        android:pathData="M6,5L2,5L2,4L6,4L6,5L6,5ZM2,8L9,8L9,7L2,7L2,8L2,8ZM2,10L9,10L9,9L2,9L2,10L2,10ZM2,12L9,12L9,11L2,11L2,12L2,12ZM12,4.5L12,14C12,14.55 11.55,15 11,15L1,15C0.45,15 0,14.55 0,14L0,2C0,1.45 0.45,1 1,1L8.5,1L12,4.5L12,4.5ZM11,5L8,2L1,2L1,14L11,14L11,5L11,5Z"
-        android:strokeColor="#00000000"
-        android:fillColor="#000000"
-        android:strokeWidth="1"/>
+        android:viewportHeight="16.0"
+    >
+  <path
+      android:pathData="M6,5L2,5L2,4L6,4L6,5L6,5ZM2,8L9,8L9,7L2,7L2,8L2,8ZM2,10L9,10L9,9L2,9L2,10L2,10ZM2,12L9,12L9,11L2,11L2,12L2,12ZM12,4.5L12,14C12,14.55 11.55,15 11,15L1,15C0.45,15 0,14.55 0,14L0,2C0,1.45 0.45,1 1,1L8.5,1L12,4.5L12,4.5ZM11,5L8,2L1,2L1,14L11,14L11,5L11,5Z"
+      android:strokeColor="#00000000"
+      android:fillColor="#FFFFFFFF"
+      android:strokeWidth="1"
+      />
 </vector>
