--- a/app/src/main/res/drawable/ic_home.xml
+++ b/app/src/main/res/drawable/ic_home.xml
@@ -1,5 +1,12 @@
-<vector android:autoMirrored="true" android:height="16dp"
-    android:viewportHeight="16.0" android:viewportWidth="16.0"
-    android:width="16dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M16,9l-3,-3L13,2h-2v2L8,1 0,9h2l1,5c0,0.55 0.45,1 1,1h8c0.55,0 1,-0.45 1,-1l1,-5h2zM12,14L9,14v-4L7,10v4L4,14L2.81,7.69 8,2.5l5.19,5.19L12,14z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:autoMirrored="true"
+        android:height="16dp"
+        android:viewportHeight="16.0"
+        android:viewportWidth="16.0"
+        android:width="16dp"
+    >
+  <path
+      android:fillColor="#FFFFFF"
+      android:pathData="M16,9l-3,-3L13,2h-2v2L8,1 0,9h2l1,5c0,0.55 0.45,1 1,1h8c0.55,0 1,-0.45 1,-1l1,-5h2zM12,14L9,14v-4L7,10v4L4,14L2.81,7.69 8,2.5l5.19,5.19L12,14z"
+      />
 </vector>
