--- a/app/src/main/res/layout-sw600dp-land/activity_repo_detail.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_repo_detail.xml
@@ -41,6 +41,7 @@
           android:layout_height="?actionBarSize"
           android:layout_marginLeft="@dimen/responsive_ly_margin_horizontal"
           android:layout_marginRight="@dimen/responsive_ly_margin_horizontal"
+          app:tabMode="fixed"
           />
     </android.support.design.widget.AppBarLayout>
 
