Branches show on repo about

--- a/app/src/main/res/menu/repo_detail_activity.xml
+++ b/app/src/main/res/menu/repo_detail_activity.xml
@@ -5,30 +5,10 @@
     >
 
   <item
-      android:id="@id/action_repo_change_branch"
-      android:orderInCategory="1"
-      android:title="@string/action_repo_change_branch"
-      app:showAsAction="ifRoom"
-      />
-
-  <item
       android:id="@+id/share_repo"
       android:orderInCategory="2"
       android:title="@string/action_share_repo"
-      app:showAsAction="ifRoom"
+      app:showAsAction="always"
+      android:icon="@drawable/ic_menu_share_mtrl_alpha"
       />
-
-  <item
-      android:id="@+id/action_add_shortcut"
-      android:orderInCategory="3"
-      android:title="@string/action_add_shortcut"
-      app:showAsAction="never"
-      />
-
-  <item
-      android:id="@+id/action_open_in_browser"
-      android:orderInCategory="4"
-      android:title="@string/action_open_in_browser"
-      app:showAsAction="never"
-    />
 </menu>
