--- a/app/src/main/res/drawable/ic_file_directory.xml
+++ b/app/src/main/res/drawable/ic_file_directory.xml
@@ -1,5 +1,11 @@
-<vector android:autoMirrored="true" android:height="16dp"
-    android:viewportHeight="16.0" android:viewportWidth="14.0"
-    android:width="14dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M13,4H7V3c0,-0.66 -0.31,-1 -1,-1H1c-0.55,0 -1,0.45 -1,1v10c0,0.55 0.45,1 1,1h12c0.55,0 1,-0.45 1,-1V5c0,-0.55 -0.45,-1 -1,-1zM6,4H1V3h5v1z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:width="14dp"
+        android:height="16dp"
+        android:viewportWidth="14.0"
+        android:viewportHeight="16.0">
+    <path
+        android:pathData="M13,4L7,4L7,3C7,2.34 6.69,2 6,2L1,2C0.45,2 0,2.45 0,3L0,13C0,13.55 0.45,14 1,14L13,14C13.55,14 14,13.55 14,13L14,5C14,4.45 13.55,4 13,4L13,4ZM6,4L1,4L1,3L6,3L6,4L6,4Z"
+        android:strokeColor="#00000000"
+        android:fillColor="#000000"
+        android:strokeWidth="1"/>
 </vector>
