--- a/app/src/main/res/layout/repo_overview_fragment.xml
+++ b/app/src/main/res/layout/repo_overview_fragment.xml
@@ -1,12 +1,136 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:fitsSystemWindows="true"
-             android:orientation="vertical"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+                                            xmlns:tools="http://schemas.android.com/tools"
+                                            xmlns:app="http://schemas.android.com/apk/res-auto"
+                                            android:layout_width="match_parent"
+                                            android:layout_height="match_parent"
+                                            android:fitsSystemWindows="true"
     >
-  <android.support.v7.widget.RecyclerView
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:id="@id/recycler"
-      />
-</FrameLayout>
+
+
+  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+      >
+
+    <TextView
+        android:id="@+id/repoDescriptionTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        tools:text="Repo description"
+        android:textSize="16sp"
+        android:autoLink="all"
+        />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/repoDetailBranchesLayout"
+        android:orientation="vertical"
+        android:divider="@drawable/divider_horizontal"
+        android:background="@drawable/countorn"
+        android:showDividers="middle"
+        android:layout_margin="8dp"
+        android:visibility="invisible"
+        tools:visibility="visible"
+        >
+
+      <RelativeLayout
+          android:layout_width="match_parent"
+          android:layout_height="48dp"
+          android:background="@drawable/rounded_grey"
+          android:paddingLeft="8dp"
+          android:paddingStart="8dp"
+          android:paddingRight="8dp"
+          android:paddingEnd="8dp"
+          >
+
+        <ImageView
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:padding="12dp"
+            android:layout_centerVertical="true"
+            app:srcCompat="@drawable/ic_git_branch"
+            tools:src="@mipmap/ic_launcher"
+            android:tint="#666666"
+            />
+
+        <TextView
+            android:id="@+id/repoDefaultBranchTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="56dp"
+            android:layout_marginStart="56dp"
+            android:layout_toLeftOf="@+id/repoDefaultBranchExpandableIcon"
+            android:layout_toStartOf="@+id/repoDefaultBranchExpandableIcon"
+            tools:text="Repo defailt branch"
+            android:textColor="?android:textColorPrimary"
+            android:textSize="16sp"
+            />
+
+        <ImageView
+            android:id="@+id/repoDefaultBranchExpandableIcon"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:padding="8dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            app:srcCompat="@drawable/chevron_down"
+            />
+
+      </RelativeLayout>
+
+      <TextView
+          android:layout_width="match_parent"
+          android:layout_height="48dp"
+          android:text="Last commit on "
+          android:gravity="center_vertical"
+          android:paddingLeft="22dp"
+          />
+
+      <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="48dp"
+          android:divider="@drawable/divider_vertical"
+          android:showDividers="middle"
+          >
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="?selectableItemBackground"
+            android:paddingLeft="16dp"
+            android:drawablePadding="-16dp"
+            android:drawableLeft="@drawable/ic_file_directory"
+            android:text="View code"
+            android:textSize="12sp"
+            />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="?selectableItemBackground"
+            android:paddingLeft="16dp"
+            android:drawablePadding="-16dp"
+            android:drawableLeft="@drawable/ic_search"
+            android:text="Jump to file"
+            android:textSize="12sp"
+            android:enabled="false"
+            />
+
+
+      </LinearLayout>
+
+    </LinearLayout>
+  </LinearLayout>
+</android.support.v4.widget.NestedScrollView>
