Open code from branches selector

--- a/app/src/main/res/layout/repo_overview_fragment.xml
+++ b/app/src/main/res/layout/repo_overview_fragment.xml
@@ -109,6 +109,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:id="@+id/repoDefaultBranchCodeButton"
             android:background="?selectableItemBackground"
             android:paddingLeft="16dp"
             android:drawablePadding="-16dp"
