--- a/app/src/main/res/layout/repo_overview_fragment.xml
+++ b/app/src/main/res/layout/repo_overview_fragment.xml
@@ -13,13 +13,14 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
       >
-    <TextView
+
+    <com.elyeproj.loaderviewlibrary.LoaderTextView
         android:id="@+id/repoDescriptionTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp"
         tools:text="Repo description"
-        android:textSize="12sp"
+        android:textSize="14sp"
         android:autoLink="all"
         />
 
@@ -32,8 +33,6 @@
         android:orientation="horizontal"
         android:showDividers="middle"
         android:divider="@drawable/divider_vertical"
-        android:visibility="invisible"
-        tools:visibility="visible"
         >
       <Button
           android:layout_width="match_parent"
@@ -74,8 +73,6 @@
         android:background="@drawable/countorn"
         android:showDividers="middle"
         android:layout_margin="8dp"
-        android:visibility="invisible"
-        tools:visibility="visible"
         >
 
       <RelativeLayout
@@ -86,6 +83,7 @@
           android:paddingStart="8dp"
           android:paddingRight="8dp"
           android:paddingEnd="8dp"
+          android:layout_margin="1dp"
           >
 
         <ImageView
@@ -98,18 +96,20 @@
             android:tint="#666666"
             />
 
-        <TextView
+        <com.elyeproj.loaderviewlibrary.LoaderTextView
             android:id="@+id/repoDefaultBranchTextView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="56dp"
             android:layout_marginStart="56dp"
+            android:textStyle="bold"
             android:layout_toLeftOf="@+id/repoDefaultBranchExpandableIcon"
             android:layout_toStartOf="@+id/repoDefaultBranchExpandableIcon"
-            tools:text="Repo defailt branch"
+            tools:text="Repo default branch"
             android:textColor="?android:textColorPrimary"
             android:textSize="16sp"
             />
@@ -130,7 +130,7 @@
 
       </RelativeLayout>
 
-      <TextView
+      <com.elyeproj.loaderviewlibrary.LoaderTextView
           android:layout_width="match_parent"
           android:layout_height="48dp"
           android:id="@+id/repoDefaultBranchInfo"
