--- a/app/src/main/res/drawable/rounded_grey.xml
+++ b/app/src/main/res/drawable/rounded_grey.xml
@@ -3,7 +3,7 @@
        android:shape="rectangle"
     >
 
-  <solid android:color="#EEEEEE"/>
+  <solid android:color="?gitskarios_card_background"/>
   <corners
       android:topLeftRadius="4dp"
       android:topRightRadius="4dp"
