--- a/app/src/main/res/menu/repo_detail.xml
+++ b/app/src/main/res/menu/repo_detail.xml
@@ -11,4 +11,16 @@
       app:showAsAction="always"
       android:icon="@drawable/ic_menu_share_mtrl_alpha"
       />
+  <item
+      android:id="@+id/action_open_in_browser"
+      android:orderInCategory="3"
+      android:title="@string/action_open_in_browser"
+      app:showAsAction="never"
+      />
+  <item
+      android:id="@+id/action_add_shortcut"
+      android:orderInCategory="4"
+      android:title="@string/action_add_shortcut"
+      app:showAsAction="never"
+      />
 </menu>
