--- a/app/src/main/res/layout/issue_detail_issue_timeline_review_secondary_view.xml
+++ b/app/src/main/res/layout/issue_detail_issue_timeline_review_secondary_view.xml
@@ -75,6 +75,7 @@
             android:layout_marginTop="@dimen/gapMedium"
             android:textColor="@color/secondary_text"
             android:textSize="@dimen/textSizeSmall"
+            android:textIsSelectable="true"
             />
       </LinearLayout>
     </android.support.v7.widget.CardView>
@@ -85,6 +86,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/gapMedium"
+        android:textIsSelectable="true"
         />
 
   </LinearLayout>
